project('learn-cpp-the-hard-way', 'cpp', default_options: ['cpp_std=c++20'])

fmt = dependency('fmt')

executable('ex02', 'ex02.cpp')
executable('ex08', 'ex08.cpp')
executable('ex09', 'ex09a.cpp', dependencies: fmt)
executable('ex10', 'ex10.cpp', dependencies: fmt)
executable('ex13', 'ex13.cpp', dependencies: fmt)
